    the hard-coded paths (Wenchieh Yen).
17. doc/tm/rtl/math.tm: feqs documentation updated to reflect a
    default relative difference of 0.01.
18. doc/tm/rtl/eval.tm: In one example, get_path_delimiter is
    incorrectly used (Frank Primini).
19. src/slstrops.c: Memory corruption was occuring when using a number
    greater than 10^256 in a "%f" format statement.

{{{ Previous Versions

Changes since 2.1.1
1. slsh/lib/readascii.sl: Typo in the usage message corrected.
2. autoconf/aclocal.m4: Fixed elf link problem on freebsd (Renato
   Botelho)
3. doc/tm/slang.tm: Some documentation updates
4. slsh/lib/cmdopt.sl: The value passed to a callback function was not
   be converted to the specified type, e.g., for
      cmdopt_add (opt, "foo", &callback; type="int");
   callback was not being passed an integer.
5. src/slang.c,slassoc.c: Optimization tweaks for inc/decrementing
   associative arrays (e.g., foo["bar"]++).
6. src/slerr.c: When SLang_set_error is called, then add the string
   representation of the error message to the message queue.
7. doc/tm/strops.tm: Corrected the documentation for the string_match
   function. (Guenter Milde)
8. src/sllimits.h: Increased the size of the hash table that stores
   SLstrings for better efficiency.
9. src/slstrops.c:_pSLang_push_nstring: Inlined the call to
   _pSLang_push_slstring.
10. slsh/lib/structfuns.sl: Ignore any NULL arguments.
11. slsh/src/readline.c: Turned on output processing in the call to
    SLang_init_tty.
12. src/slang.h: Several functions were marked as "extern" and not as
    SL_EXTERN.  This makes a difference for CYGWIN and WIN32.
13. src/Makefile.in, autoconf/*: Better support for the creation of
    cygwin DLLs.
14. src/slang.h: Under windows+cygwin, if SLANG_DLL is not defined,
    the it will get defined as 1.  This means that by default, the
    application will get compiled against the slang DLL.  To build
    against a static version of the library. compile your code using
    -DSLANG_DLL=0.